src/qir/snapshots/hugr_qir__qir__random_ext__test__emit@pre-mem2reg@llvm14_tket.quantum.QAlloc.snap
---
source: src/qir/random_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

%Qubit = type opaque

define %Qubit* @_hl.main.1() {
alloca_block:
  %"0" = alloca %Qubit*, align 8
  %"4_0" = alloca %Qubit*, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %0 = call %Qubit* @__quantum__rt__qubit_allocate()
  store %Qubit* %0, %Qubit** %"4_0", align 8
  %"4_01" = load %Qubit*, %Qubit** %"4_0", align 8
  store %Qubit* %"4_01", %Qubit** %"0", align 8
  %"02" = load %Qubit*, %Qubit** %"0", align 8
  ret %Qubit* %"02"
}

declare %Qubit* @__quantum__rt__qubit_allocate()
